chore(back): import script and address geo
